--- a/map.css
+++ b/map.css
@@ -4,6 +4,18 @@ body {
 	text-align: center;
 }
 
+h1 {
+	font-size: 50px;
+}
+
 p {
-	transition-duration: 1s;
+	font-size: 30px;
+	height: 1em;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
